--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "react-scripts": "^5.0.1"
   },
   "dependencies": {
-    "react-animated-heart": "^0.0.7",
-    "react-icons": "^4.8.0",
     "axios": "^1.3.5",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "react-animated-heart": "^0.0.7",
+    "react-icons": "^4.8.0"
   }
 }
